<resources>
    <string name="app_name">S2k</string>
    <string name="icon_extraction_succeeded">🆗</string>
    <string name="icon_extraction_failed">🆖</string>
    <string name="icon_extraction_continuation">♻️</string>
    <string name="icon_replied">📨</string>
    <string name="icon_send_none">⬜</string>
    <string name="icon_send_auto">✅</string>
    <string name="icon_send_manual">☑️</string>
    <string name="icon_company_name_converted">🔄</string>
    <string name="icon_extraction_rule">⚙️</string>
    <string name="icon_extraction_ai">🤖</string>
    <string name="icon_send_target_exists">🈶</string>
    <string name="icon_send_target_unconfigured">🈚</string>
    <string name="btn_refresh">更新</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="btn_clear">クリア</string>
    <string name="btn_copy">コピー</string>
    <string name="btn_delete">削除</string>
    <string name="btn_delete_all">すべて削除</string>
    <string name="btn_send">送信</string>
    <string name="btn_search">検索</string>
    <string name="btn_select_all">全選択</string>
    <string name="btn_deselect_all">選択解除</string>
    <string name="btn_reset">初期化</string>
    <string name="btn_save_settings">設定を保存</string>
    <string name="toast_settings_saved">設定を保存しました</string>
    <string name="label_send_target_filter">送信先</string>
    <string name="label_top_sms_send">SMSの送信モード</string>
    <string name="label_top_sms_send_auto">自動</string>
    <string name="label_top_sms_send_manual">手動</string>
    <string name="label_top_sms_reply">SMSの返信モード</string>
    <string name="label_top_sms_reply_auto">自動</string>
    <string name="label_top_sms_reply_manual">手動</string>
    <string name="btn_top_open_log">ログの確認</string>
    <string name="btn_top_open_sms_search">SMSの検索</string>
    <string name="btn_top_open_send_target_settings">送信先の設定</string>
    <string name="btn_top_open_app_settings">アプリの設定</string>
    <string name="btn_top_open_settings_import_export">設定のインポート・エクスポート</string>
    <string name="title_send_target_settings">送信先の設定</string>
    <string name="title_send_target_settings_description"></string>
    <string name="btn_send_target_settings_add">設定を追加</string>
    <string name="suffix_send_target_settings_copy">のコピー</string>
    <string name="label_send_target_settings_none">なし</string>
    <string name="label_send_target_settings_name_unset">(名称未設定)</string>
    <string name="label_send_target_settings_index">設定 %1$d</string>
    <string name="toast_send_target_settings_no_send_targets">設定を1つ以上追加してください</string>
    <string name="section_send_target_settings_basic_info">基本の設定</string>
    <string name="section_send_target_settings_send_target_name">送信先</string>
    <string name="hint_send_target_settings_send_target_name">送信先名</string>
    <string name="section_send_target_settings_company_name">会社名</string>
    <string name="hint_send_target_settings_company_name">会社名</string>
    <string name="section_send_target_settings_sms_target">送信先の振り分け</string>
    <string name="hint_send_target_settings_keyword">含む文字列</string>
    <string name="btn_send_target_settings_add_keyword">+</string>
    <string name="btn_send_target_settings_remove_keyword">×</string>
    <string name="helper_send_target_settings_keywords">未設定の場合はデフォルトの送信先として扱われます</string>
    <string name="section_send_target_settings_kintone_info">kintoneの設定</string>
    <string name="section_send_target_settings_connection">接続先</string>
    <string name="hint_send_target_settings_subdomain">サブドメイン</string>
    <string name="section_send_target_settings_app">連絡用のアプリ</string>
    <string name="hint_send_target_settings_app_id">アプリID</string>
    <string name="section_send_target_settings_auth_info">認証情報</string>
    <string name="hint_send_target_settings_login_name">ログイン名</string>
    <string name="hint_send_target_settings_login_password">パスワード</string>
    <string name="section_send_target_settings_field_mapping">フィールドコード</string>
    <string name="hint_send_target_settings_field_sender">送信元</string>
    <string name="hint_send_target_settings_field_history">履歴</string>
    <string name="hint_send_target_settings_field_datetime">受信日時</string>
    <string name="hint_send_target_settings_field_type">登録種別</string>
    <string name="hint_send_target_settings_field_company">会社名</string>
    <string name="hint_send_target_settings_field_user_name">氏名</string>
    <string name="hint_send_target_settings_field_body">本文</string>
    <string name="section_send_target_settings_update_tolerance_condition">統合範囲</string>
    <string name="rb_send_target_settings_update_tolerance_mode_same_date">同一日付</string>
    <string name="rb_send_target_settings_update_tolerance_mode_hours">時間</string>
    <string name="hint_send_target_settings_update_tolerance_hours">±時間</string>
    <string name="helper_send_target_settings_update_tolerance_hours">指定した時間以内に同じ送信元から再度受信した場合は、既存のデータを更新します</string>
    <string name="dialog_title_send_target_settings_validation_error">入力エラー</string>
    <string name="dialog_message_send_target_settings_validation_error">%1$s\n\n送信先名・サブドメイン・認証情報・アプリID・フィールドコードは必須です</string>
    <string name="dialog_message_send_target_settings_validation_error_duplicate_name">送信先名が重複しています\n%1$s</string>
    <string name="btn_send_target_settings_send_test">テスト送信</string>
    <string name="dialog_title_send_target_settings_test_send_body">テスト本文</string>
    <string name="dialog_title_send_target_settings_test_send_result">テスト結果</string>
    <string name="dialog_message_send_target_settings_test_send_result_failure">送信失敗\n\n%1$s</string>
    <string name="dialog_message_send_target_settings_test_send_result_network_error">通信エラー\n\n%1$s</string>
    <string name="dialog_message_send_target_settings_test_send_routing_unmatched">送信先エラー\n\n振り分け設定（会社名）:%1$s</string>
    <string name="label_send_target_settings_test_send_body_template_no_keywords">NTTデータ○○○\nテスト太郎\n\nこれはアプリからのテスト送信です</string>
    <string name="label_send_target_settings_test_send_body_template_exists_keywords">%1$s\nテスト太郎\n\nこれはアプリからのテスト送信です</string>
    <string name="label_send_target_settings_test_send_body_template_company_name_extraction_disabled">テスト太郎\n\nこれはアプリからのテスト送信です</string>
    <string name="title_app_settings">アプリの設定</string>
    <string name="dialog_title_app_settings_confirm_reset_settings">設定を初期化しますか？</string>
    <string name="dialog_message_app_settings_confirm_reset_settings">この操作は取り消せません</string>
    <string name="section_app_settings_permission">端末の許可</string>
    <string name="label_app_settings_sms_receive_permission">SMSの受信</string>
    <string name="btn_app_settings_sms_receive_permission">許可する</string>
    <string name="label_app_settings_permission_sms_receive_granted">許可済み</string>
    <string name="toast_app_settings_sms_receive_permission_denied">SMSの受信の許可がない場合、SMSの自動送信・自動返信ができません</string>
    <string name="helper_app_settings_sms_receive_permission">SMSの自動操作（自動送信・自動返信）に使用します</string>
    <string name="label_app_settings_sms_send_permission">SMSの送信</string>
    <string name="btn_app_settings_sms_send_permission">許可する</string>
    <string name="label_app_settings_permission_sms_send_granted">許可済み</string>
    <string name="toast_app_settings_sms_send_permission_denied">SMSの送信の許可がない場合、自動返信はできません</string>
    <string name="helper_app_settings_sms_send_permission">SMSの自動返信に使用します</string>
    <string name="label_app_settings_sms_read_permission">SMSの読み取り</string>
    <string name="btn_app_settings_sms_read_permission">許可する</string>
    <string name="label_app_settings_permission_sms_read_granted">許可済み</string>
    <string name="toast_app_settings_sms_read_permission_denied">SMSの読み取りの許可がない場合、SMSの検索はできません</string>
    <string name="helper_app_settings_sms_read_permission">SMSの検索に使用します</string>
    <string name="section_app_settings_layout">レイアウトの変更</string>
    <string name="section_app_settings_theme_mode">表示テーマ</string>
    <string name="rb_app_settings_theme_light">ライト</string>
    <string name="rb_app_settings_theme_dark">ダーク</string>
    <string name="section_app_settings_sms_search">SMSの検索</string>
    <string name="label_app_settings_search_filter">検索条件の初期値</string>
    <string name="label_app_settings_sms_search_date_range">受信日の範囲</string>
    <string name="hint_app_settings_sms_search_date_range_days">日</string>
    <string name="label_app_settings_default_send_target_filter">送信先</string>
    <string name="label_app_settings_default_send_status_filter">送信状況</string>
    <string name="switch_app_settings_default_send_none_only_enabled">未送信</string>
    <string name="switch_app_settings_default_sent_auto_only_enabled">済（自動）</string>
    <string name="switch_app_settings_default_sent_manual_only_enabled">済（手動）</string>
    <string name="label_app_settings_default_extraction_status_filter">抽出状況</string>
    <string name="switch_app_settings_default_extraction_succeeded_only_enabled">正常</string>
    <string name="switch_app_settings_default_extraction_failed_only_enabled">異常</string>
    <string name="switch_app_settings_default_extraction_continuation_only_enabled">引継ぎ</string>
    <string name="section_app_settings_search_filters_visibility">検索条件の表示</string>
    <string name="rb_app_settings_search_filters_visible">表示</string>
    <string name="rb_app_settings_search_filters_hidden">隠す</string>
    <string name="label_app_settings_search_selection_target">SMS選択の対象</string>
    <string name="switch_app_settings_search_extraction_failed_enabled">抽出状況が異常</string>
    <string name="helper_app_settings_search_extraction_failed_enabled">抽出状況が異常なSMSを検索結果で選択できるようにします</string>
    <string name="switch_app_settings_search_extraction_continuation_enabled">抽出状況が引継ぎ</string>
    <string name="helper_app_settings_search_extraction_continuation_enabled">抽出状況が引継ぎのSMSを検索結果で選択できるようにします</string>
    <string name="section_app_settings_sms_send">SMSの送信</string>
    <string name="label_app_settings_sms_send_mode">送信モード</string>
    <string name="rb_app_settings_sms_send_mode_manual">手動</string>
    <string name="rb_app_settings_sms_send_mode_auto">自動</string>
    <string name="helper_app_settings_sms_send_mode">SMSを受信した場合、kintoneへ自動送信します</string>
    <string name="section_app_settings_send_target">自動送信の対象</string>
    <string name="switch_app_settings_send_extraction_failed_enabled">抽出状況が異常</string>
    <string name="helper_app_settings_send_extraction_failed_enabled">抽出状況が異常なSMSを自動送信の対象として含めることができます</string>
    <string name="switch_app_settings_send_extraction_continuation_enabled">抽出状況が引継ぎ</string>
    <string name="helper_app_settings_send_extraction_continuation_enabled">抽出状況が引継ぎのSMSを自動送信の対象として含めることができます</string>
    <string name="section_app_settings_sms_reply">SMSの返信</string>
    <string name="label_app_settings_sms_reply_mode">返信モード</string>
    <string name="rb_app_settings_sms_reply_mode_manual">手動</string>
    <string name="rb_app_settings_sms_reply_mode_auto">自動</string>
    <string name="helper_app_settings_auto_reply_extraction_failed_enabled">「抽出状況が異常」なSMSを受信した場合、返信用のメッセージを自動返信します</string>
    <string name="label_app_settings_auto_reply_cooldown_seconds">自動返信の間隔</string>
    <string name="helper_app_settings_auto_reply_cooldown_seconds">同じ送信元には、ここで指定した時間が経過するまで自動返信を再送信しません</string>
    <string name="hint_app_settings_auto_reply_cooldown_seconds">秒</string>
    <string name="section_app_settings_reply">返信メッセージ（自動入力）</string>
    <string name="title_continuation_info_settings">引継ぎ内容の設定</string>
    <string name="label_continuation_info_settings_search">キーワード</string>
    <string name="hint_continuation_info_settings_search">検索キーワード</string>
    <string name="message_continuation_info_settings_empty">引継ぎ内容がありません</string>
    <string name="message_continuation_info_settings_no_match">一致する引継ぎ内容がありません</string>
    <string name="label_continuation_info_settings_sort">表示順序</string>
    <string name="rb_continuation_info_settings_sort_ascending">古い順</string>
    <string name="rb_continuation_info_settings_sort_descending">新しい順</string>
</resources>